# lambdastack

./: .docker_prompt  .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  lsio  motd  version
.devcontainer/: Dockerfile  README.md  build-docker-image.sh  build-docker-push-to-registry.sh  devcontainer.json  gen-dependency-info.py  push-to-registry.sh  pyproject.toml  requirements.md  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
ansible/: inventory.j2
ansible/playbooks/: applications.yml  firewall.yml  helm.yml  repository_setup.yml  repository_teardown.yml  upgrade.yml
cli/: lambdastack  lambdastack.py  licenses.py  lscli  lscli.py  version.py
cli/engine/: ApplyEngine.py  BackupRecoveryEngineBase.py  DeleteEngine.py  InitEngine.py  TestEngine.py
cli/helpers/: Config.py  build_io.py  data_loader.py
docs/architecture/: logical-view.md  physical-view.md  process-view.md
docs/changelogs/: CHANGELOG-0.1.md  CHANGELOG-0.10.md  CHANGELOG-0.3.md  CHANGELOG-0.4.md  CHANGELOG-0.5.md  CHANGELOG-0.6.md  CHANGELOG-0.7.md  CHANGELOG-0.8.md  CHANGELOG-0.9.md  CHANGELOG-1.0.md  CHANGELOG-1.1.md  CHANGELOG-1.2.md  CHANGELOG-1.3.md  CHANGELOG-1.4.md
docs/home/: ARM.md  CERTIFICATES.md  COMPONENTS.md  DEVELOPMENT.md  (+8 more)
example-apps/python/helloworld/: Dockerfile  build-docker-image.sh  pyproject.toml
example-apps/python/helloworld/helloworld/: helloworld.py
example-apps/python/helloworld/tests/: test_helloworld.py
examples/: .gitignore  README.md
website/: build.sh  config.toml  package.json
(+305 files in other folders)
