[tool.poetry]
name = "lambdastack-devcon"
version = "0.10.0"
description = "LambdaStack Dev Container"
authors = ["LambdaStack"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "*"
jinja2 = "*"
boto3 = "*"
jsonschema = "*"
python-json-logger = "*"
ansible = "*"
terraform-bin = "*"
"ruamel.yaml" = "*"
azure-cli = "^2.30.0"
Flask = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
