[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["hanscj1 <cjones@cloudm2.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
